@@ -13,6 +13,7 @@ cdrom-retriever
 load-installer
 cdrom-checker
 bogl-bterm-udeb
+di-utils-terminfo
 cdebconf-priority
 cdebconf-newt-udeb
 usb-discover
