@@ -7,6 +7,7 @@ discover-data-udeb
 discover-udeb
 hw-detect
 bogl-bterm-udeb
+di-utils-terminfo
 cdebconf-newt-udeb
 nano-udeb
 
